# SwarmPilot

./: .gitignore  CLAUDE.md  README.md  e2e_examples_report.md  pyproject.toml  test_optimized_sampling.py  test_quantiles_simple.py  test_scheduler_custom_quantiles.py  test_strategy_api.py
graph/: pyproject.toml
graph/examples/: instance_client_start_model_example.py  node_usage_example.py
graph/src/: graph.py  node.py
graph/src/clients/: __init__.py  instance_client.py  models.py  predictor_client.py  scheduler_client.py
graph/tests/integration/: test_client_autostart.py  test_predictor_client_manual.py
graph/tests/unit/: test_exceptions.py  test_instance_client.py  test_node.py  test_predictor_client.py  test_scheduler_client.py
instance/: .env.example  .gitignore  IMPLEMENTATION.md  PLATFORM_OVERRIDE_GUIDE.md  QUICKSTART.md  README.md  README_FOR_LLM.md  RESTART_API_IMPLEMENTATION.md  build_sleep_model.sh  pyproject.toml  test_docker.py  test_platform_override.py
instance/dockers/: model_registry.yaml
instance/dockers/dummy_query_criteria_summary/: Dockerfile  docker-compose.yaml  main.py
instance/dockers/dummy_think/: main.py  pyproject.toml
instance/dockers/llm_service_large_model/: docker-compose.yaml  main.py
instance/dockers/llm_service_small_model/: Dockerfile  main.py  pyproject.toml
instance/dockers/ocr_model/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  start.sh
instance/dockers/sleep_model/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  start.sh
instance/dockers/t2img/: Dockerfile  main.py  pyproject.toml  start.sh
instance/docs/: 1.ARCHITECTURE.md  2.MODEL_CONTAINER_SPEC.md  3.MODEL_REGISTRY.md  4.STARTUP_PROCEDURES.md  5.API_REFERENCE.md  6.REDEPLOY_GUIDE.md  README.md  api-routes.md  api-schemas.md
instance/src/: __init__.py  api.py  cli.py  config.py  docker_manager.py  logger.py  manager_factory.py  model_registry.py  models.py  port_utils.py  scheduler_client.py  server.py  subprocess_manager.py  task_queue.py  websocket_client.py  websocket_client_singleton.py
instance/src/api/: __init__.py  (+1 more)
instance/tests/: conftest.py  test_websocket_client.py
planner/: .env.example  .gitignore  README.md  README_FOR_LLM.md  TEST_VERIFICATION_REPORT.md  cli.py  pyproject.toml
planner/docs/: 1.API_REFERENCE.md  1.introduction.md  2.PYLET_INTEGRATION.md  4.algorithm_details.md  submit_throughput.md
planner/examples/: 0.generate_simple_plan.py  1.generate_plan_for_initial.py
planner/src/: api.py  available_instance_store.py  config.py  deployment_service.py  instance_timeline_tracker.py  logging_config.py  migration_optimizer.py  models.py  pylet_api.py  scheduler_registry.py
planner/tests/: __init__.py  conftest.py  test_api.py  test_auto_optimize.py  test_config.py  test_deployment_service.py  test_e2e_api_behavior.py  test_instance_timeline_tracker.py  test_logging_integration.py  test_migration_optimizer.py  test_models.py  test_submit_throughput.py  test_swarm_optimizer.py
predictor/: .gitignore  PREDICTOR_QUICK_START.md  README_FOR_LLM.md  TESTING.md  coverage.json  predictor.toml.example  pyproject.toml  test_custom_quantiles.py
predictor/docs/: 1.INDEX.md  1.introduction.md  2.QUICK_START.md  3.USAGE_EXAMPLES.md  4.DATA_MODELS.md  5.API_ENDPOINTS.md  6.PREDICTION_TYPES.md  7.ERROR_HANDLING.md  8.BEST_PRACTICES.md  9.LIBRARY_API.md  CUSTOM_QUANTILES.md  EXPERIMENT_MODE_DISTRIBUTIONS.md  README.md  preprocessor_v2_api.md
predictor/examples/: README.md
predictor/scripts/: evaluate_model.py
predictor/src/: __init__.py  api.py  cli.py  config.py  models.py
predictor/tests/: conftest.py  test_api.py  test_api_errors.py  test_api_v2.py  test_api_with_data.py  test_api_with_data_README.md  test_backward_compatibility.py  test_cli.py  test_config.py  test_custom_quantiles.py  test_experiment.py  test_hardware_perf_info.py  test_integration.py  test_logging.py  test_predictors.py  test_preprocessor.py  test_storage.py
scheduler/: .gitignore  BACKGROUND_SCHEDULER_ARCHITECTURE.md  README.md  README_FOR_LLM.md  cli.py  pyproject.toml
scheduler/docs/: 1.API_REFERENCE.md  10.BACKGROUND_SCHEDULER.md  11.REDEPLOY_API.md  2.DATA_MODELS.md  2.Scheduling_Strategy.md  2.quick_start.md  3.INSTANCE_API.md  4.TASK_API.md  4.algorithm_details.md  5.STRATEGY_API.md  6.HEALTH_API.md  7.WEBSOCKET_API.md  8.SCHEDULING_STRATEGIES.md  9.USAGE_EXAMPLES.md  ARCHITECTURE.md  HOW_TO_ADD_NEW_STRATEGY.md  INSTANCE_WEBSOCKET_PROTOCOL.md  README.md  SERVICES.md  WEBSOCKET_ARCHITECTURE.md  api-instances.md  api-tasks.md  api-websocket.md  data-models.md  implementation.md  scheduling_threshold_feature.md  throughput_tracking.md  websocket_keepalive_fix.md
scheduler/src/: __init__.py  api.py  background_scheduler.py  central_queue.py  cli.py  config.py  http_error_logger.py  instance_connection_manager.py  instance_registry.py  instance_sync.py  instance_websocket_server.py  logger.py  model.py  planner_reporter.py  predictor_client.py  scheduler.py  task_dispatcher.py  task_registry.py  throughput_tracker.py  training_client.py  websocket_manager.py
scheduler/tests/: conftest.py  test_adaptive_bootstrap.py  test_api.py  test_background_scheduler.py  test_central_queue.py  test_cli.py  test_http_error_logger.py  test_instance_queue_manager.py  test_instance_registry.py  test_instance_sync_api.py  test_instance_websocket.py  test_logger.py  test_model.py  test_planner_reporter.py  test_planner_reporter_throughput.py  test_predictor_client.py  test_preprocessor_config.py  test_proxy_router.py  test_queue_state_adapter.py  test_queue_type_mismatch.py  test_redeploy_integration.py  test_repredict.py  test_safe_removal.py  test_safe_removal_api.py  test_schedule_info.py  test_scheduler.py  test_scheduling_threshold.py  test_shutdown_handler.py  test_strategy_scheduling.py  test_task_clear.py  test_task_dispatcher.py  test_task_registry.py  test_task_result_callback.py  test_throughput_tracker.py  test_training_client.py  test_update_metadata.py  test_websocket_manager.py  test_worker_queue_manager.py  test_worker_queue_thread.py
(+1035 files in other folders)
