[project]
name = "swarmpilot"
version = "0.1.0"
description = "Distributed task scheduling and execution system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "swarmpilot-scheduler",
    "swarmpilot-instance",
    "swarmpilot-predictor",
    "swarmpilot-planner",
    "requests>=2.32.5",
    "plotly>=6.3.1",
    "pandas>=2.3.3",
    "websockets>=15.0.1",
    "uvloop>=0.22.1",
    "tqdm>=4.67.1",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "matplotlib>=3.10.7",
    "transformers>=4.57.1",
    "datasets>=4.4.1",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
# Single service extras (for selective installation)
scheduler = ["swarmpilot-scheduler"]
instance = ["swarmpilot-instance"]
predictor = ["swarmpilot-predictor"]
planner = ["swarmpilot-planner"]

# All services (explicit install all)
all = [
    "swarmpilot-scheduler",
    "swarmpilot-instance",
    "swarmpilot-predictor",
    "swarmpilot-planner",
]

# Development dependencies (aggregated from all subpackages)
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "faker>=37.12.0",
    "respx>=0.22.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
swarmpilot-scheduler = { workspace = true }
swarmpilot-instance = { workspace = true }
swarmpilot-predictor = { workspace = true }
swarmpilot-planner = { workspace = true }

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "scheduler",
    "instance",
    "predictor",
    "planner",
    "instance/dockers/sleep_model", "graph", "instance/dockers/llm_service_large_model",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
]
