[project]
name = "swarmpilot"
version = "0.1.0"
description = "Distributed task scheduling and execution system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework & server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    # HTTP client
    "httpx>=0.25.0",
    # ML / numeric
    "torch>=2.0.0",
    "numpy>=1.24.0,<2.3",
    "scipy>=1.16.3",
    "joblib>=1.3.0",
    "transformers>=4.57.1,<5.0",
    # CLI
    "typer>=0.9.0",
    # Logging
    "loguru>=0.7.0",
    # Utilities
    "python-dateutil>=2.8.0",
    "websockets>=12.0",
    # Planner deps
    "pulp>=3.3.0",
    # Profiling
    "pyinstrument>=5.1.1",
    "vllm==0.11.0",
    "pylet>=0.5.0",
]

[project.optional-dependencies]
analysis = [
    "requests>=2.32.5",
    "plotly>=6.3.1",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "tiktoken>=0.12.0",
    "datasets>=4.4.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
sscheduler = "swarmpilot.scheduler.cli:app"
spredictor = "swarmpilot.predictor.cli:main"
splanner = "swarmpilot.planner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarmpilot"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "faker>=37.12.0",
    "respx>=0.22.0",
    "httpx>=0.28.1",
    "ruff>=0.8.0",
    "black>=25.9.0",
    "aiohttp>=3.13.2",
    "pandas>=2.3.3",
]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
import_mode = "importlib"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["swarmpilot"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__main__.py",
    "swarmpilot/scripts/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# =============================================================================
# Ruff Configuration (Google Python Style Guide)
# =============================================================================
[tool.ruff]
line-length = 80
target-version = "py311"
src = ["swarmpilot", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "D",      # pydocstyle (docstrings)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument (FastAPI Query/Depends pattern)
    "B904",   # Exception chaining (too pedantic for HTTP exceptions)
    "B905",   # zip() strict= (Python 3.10+, not always needed)
    "N803",
    "N806",
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["D100", "D102", "D103", "SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["swarmpilot"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
