[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmpilot-planner"
version = "0.1.0"
description = "Planner service - Optimize model-to-instance deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pulp>=3.3.0",
    "pydantic>=2.12.3",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
splanner = "cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D105",   # Missing docstring in magic method
    "E501",   # Line too long (handled by formatter, allow exceptions)
    "B904",   # Exception chaining (too pedantic for HTTP exceptions)
    "B905",   # zip() strict= (Python 3.10+, not always needed)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
