[project]
name = "swarmpilot-predictor"
version = "0.1.0"
description = "Runtime prediction service with MLP-based expect/error and quantile regression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "python-dateutil>=2.8.0",
    "websockets>=12.0",
    "typer>=0.9.0",
    "loguru>=0.7.3",
]

[project.scripts]
spredictor = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.13.2",
]
