[project]
name = "t2img"
version = "0.1.0"
description = "Text-to-Image service using FLUX model"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "diffusers>=0.25.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
